add_subdirectory(eval)

add_library(max_cut_local_search max_cut_local_search.cpp)
target_link_libraries(max_cut_local_search LPMP)

add_executable(convert_dimacs_qpbo_max_flow_to_max_cut convert_dimacs_qpbo_max_flow_to_max_cut.cpp)
target_link_libraries(convert_dimacs_qpbo_max_flow_to_max_cut LPMP dimacs_max_flow_input)

add_executable(convert_dimacs_graph_cut_max_flow_to_max_cut convert_dimacs_graph_cut_max_flow_to_max_cut.cpp)
target_link_libraries(convert_dimacs_graph_cut_max_flow_to_max_cut LPMP dimacs_max_flow_input)

add_library(max_cut_text_input max_cut_text_input.cpp)
target_link_libraries(max_cut_text_input LPMP)

add_library(max_cut_cycle_packing max_cut_cycle_packing.cpp)
target_link_libraries(max_cut_cycle_packing LPMP)

add_library(max_cut_odd_bicycle_wheel_packing max_cut_odd_bicycle_wheel_packing.cpp)
target_link_libraries(max_cut_odd_bicycle_wheel_packing LPMP)

add_executable(max_cut_cycle_packing_text_input max_cut_cycle_packing_text_input.cpp)
target_link_libraries(max_cut_cycle_packing_text_input LPMP max_cut_cycle_packing max_cut_text_input)

add_executable(max_cut_odd_bicycle_wheel_packing_text_input max_cut_odd_bicycle_wheel_packing_text_input.cpp)
target_link_libraries(max_cut_odd_bicycle_wheel_packing_text_input LPMP max_cut_cycle_packing max_cut_odd_bicycle_wheel_packing max_cut_text_input)

add_library(max_cut_greedy_additive_edge_contraction max_cut_greedy_additive_edge_contraction.cpp)
target_link_libraries(max_cut_greedy_additive_edge_contraction LPMP)

add_executable(max_cut_greedy_additive_edge_contraction_text_input max_cut_greedy_additive_edge_contraction_text_input.cpp)
target_link_libraries(max_cut_greedy_additive_edge_contraction_text_input LPMP max_cut_greedy_additive_edge_contraction max_cut_local_search max_cut_text_input)

add_library(max_cut_sahni_gonzalez max_cut_sahni_gonzalez.cpp)
target_link_libraries(max_cut_sahni_gonzalez LPMP)

add_executable(max_cut_sahni_gonzalez_text_input max_cut_sahni_gonzalez_text_input.cpp)
target_link_libraries(max_cut_sahni_gonzalez_text_input LPMP max_cut_sahni_gonzalez max_cut_local_search max_cut_text_input)

add_executable(max_cut_cycle_text_input max_cut_cycle_text_input.cpp)
target_link_libraries(max_cut_cycle_text_input LPMP max_cut_cycle_packing max_cut_greedy_additive_edge_contraction max_cut_sahni_gonzalez max_cut_local_search max_cut_text_input)

add_executable(max_cut_odd_bicycle_wheel_text_input max_cut_odd_bicycle_wheel_text_input.cpp)
target_link_libraries(max_cut_odd_bicycle_wheel_text_input LPMP max_cut_cycle_packing max_cut_odd_bicycle_wheel_packing max_cut_greedy_additive_edge_contraction max_cut_sahni_gonzalez max_cut_local_search max_cut_text_input)

add_executable(max_cut_cycle_qpbo_uai_input max_cut_cycle_qpbo_uai_input.cpp)
target_link_libraries(max_cut_cycle_qpbo_uai_input LPMP max_cut_cycle_packing max_cut_greedy_additive_edge_contraction max_cut_sahni_gonzalez max_cut_local_search mrf_uai_input)

add_executable(max_cut_odd_bicycle_wheel_qpbo_uai_input max_cut_odd_bicycle_wheel_qpbo_uai_input.cpp)
target_link_libraries(max_cut_odd_bicycle_wheel_qpbo_uai_input LPMP max_cut_cycle_packing max_cut_odd_bicycle_wheel_packing max_cut_greedy_additive_edge_contraction max_cut_sahni_gonzalez max_cut_local_search mrf_uai_input)
