add_library(dimacs_max_flow_input dimacs_max_flow_input.cpp)
target_link_libraries(dimacs_max_flow_input LPMP)

add_executable(convert_dimacs_qpbo_max_flow_to_mrf_uai convert_dimacs_qpbo_max_flow_to_mrf_uai.cpp)
target_link_libraries(convert_dimacs_qpbo_max_flow_to_mrf_uai LPMP dimacs_max_flow_input)

add_executable(convert_dimacs_graph_cut_max_flow_to_mrf_uai convert_dimacs_graph_cut_max_flow_to_mrf_uai.cpp)
target_link_libraries(convert_dimacs_graph_cut_max_flow_to_mrf_uai LPMP dimacs_max_flow_input) 
