add_library(multicut_text_input multicut_text_input.cpp)
target_link_libraries(multicut_text_input LPMP)

add_library(multicut_kernighan_lin multicut_kernighan_lin.cpp)
target_link_libraries(multicut_kernighan_lin LPMP)

add_library(transform_multigraph_matching transform_multigraph_matching.cpp)
target_link_libraries(transform_multigraph_matching LPMP) 

add_executable(sorted_multicut_sequential_edge_fixation_text sorted_multicut_sequential_edge_fixation_text.cpp)
target_link_libraries(sorted_multicut_sequential_edge_fixation_text LPMP multicut_text_input)

add_executable(convert_opengm_multicut_to_text convert_opengm_multicut_to_text.cpp)
target_link_libraries(convert_opengm_multicut_to_text LPMP HDF5) 

add_executable(convert_simple_multicut_hdf5_to_text convert_simple_multicut_hdf5_to_text.cpp)
target_link_libraries(convert_simple_multicut_hdf5_to_text LPMP HDF5 transform_multigraph_matching) 

add_executable(convert_andres_multicut_to_text convert_andres_multicut_to_text.cpp)
target_link_libraries(convert_andres_multicut_to_text LPMP HDF5) 

add_executable(convert_andres_multicut_grid_graph_to_text convert_andres_multicut_grid_graph_to_text.cpp)
target_link_libraries(convert_andres_multicut_grid_graph_to_text LPMP HDF5) 

add_executable(convert_multigraph_matching_to_multicut convert_multigraph_matching_to_multicut.cpp)
target_link_libraries(convert_multigraph_matching_to_multicut LPMP multigraph_matching_input transform_multigraph_matching)
