add_executable(test_asymmetric_multiway_cut_parser test_asymmetric_multiway_cut_parser.cpp)
target_link_libraries(test_asymmetric_multiway_cut_parser asymmetric_multiway_cut_parser LPMP)
add_test(test_asymmetric_multiway_cut_parser test_asymmetric_multiway_cut_parser)

add_executable(test_asymmetric_multiway_cut_gaec test_asymmetric_multiway_cut_gaec.cpp)
target_link_libraries(test_asymmetric_multiway_cut_gaec asymmetric_multiway_cut_parser asymmetric_multiway_cut_gaec LPMP)
add_test(test_asymmetric_multiway_cut_gaec test_asymmetric_multiway_cut_gaec)

add_executable(test_asymmetric_multiway_cut_instance test_asymmetric_multiway_cut_instance.cpp)
target_link_libraries(test_asymmetric_multiway_cut_instance asymmetric_multiway_cut_parser asymmetric_multiway_cut_instance LPMP)
add_test(test_asymmetric_multiway_cut_instance test_asymmetric_multiway_cut_instance)
