add_executable(multigraph_matching_consistency_constraint_test multigraph_matching_consistency_constraint_test.cpp)
target_link_libraries(multigraph_matching_consistency_constraint_test LPMP)
add_test(multigraph_matching_consistency_constraint_test multigraph_matching_consistency_constraint_test)

add_executable(minimal_synchronization_example minimal_synchronization_example.cpp)
target_link_libraries(minimal_synchronization_example LPMP multigraph_matching_factors multicut_kernighan_lin multigraph_matching_input transform_multigraph_matching)
add_test(minimal_synchronization_example minimal_synchronization_example)

add_executable(multigraph_matching_transformation multigraph_matching_transformation.cpp)
target_link_libraries(multigraph_matching_transformation LPMP multigraph_matching_factors multicut_kernighan_lin multigraph_matching_input transform_multigraph_matching)
add_test(multigraph_matching_transformation multigraph_matching_transformation)

add_executable(test_multigraph_matching_min_marginals_triplet_consistency test_multigraph_matching_min_marginals_triplet_consistency.cpp)
target_link_libraries(test_multigraph_matching_min_marginals_triplet_consistency LPMP multigraph_matching_factors)
add_test(test_multigraph_matching_min_marginals_triplet_consistency test_multigraph_matching_min_marginals_triplet_consistency)

add_executable(test_multigraph_matching_synchronization test_multigraph_matching_synchronization.cpp)
target_link_libraries(test_multigraph_matching_synchronization LPMP multigraph_matching_synchronization)
add_test(test_multigraph_matching_synchronization test_multigraph_matching_synchronization)
