add_executable(koopmans_beckmann_test_input koopmans_beckmann_test_input.cpp)
target_link_libraries(koopmans_beckmann_test_input LPMP graph_matching_koopmans_beckmann_input)
add_test(koopmans_beckmann_test_input koopmans_beckmann_test_input) 

add_executable(test_graph_matching_input_export test_graph_matching_input_export.cpp)
target_link_libraries(test_graph_matching_input_export LPMP MRF_factors graph_matching_frank_wolfe)
add_test(test_graph_matching_input_export test_graph_matching_input_export)
