add_executable(max_potential_on_chain_test max_potential_on_chain_test.cpp)
target_link_libraries(max_potential_on_chain_test LPMP DD_ILP lingeling m stdc++ pthread )
add_test(max_potential_on_chain_test max_potential_on_chain_test) 

add_executable(max_potential_on_tree_dynamic_prog_test max_potential_on_tree_dynamic_prog_test.cpp)
target_link_libraries(max_potential_on_tree_dynamic_prog_test LPMP DD_ILP lingeling m stdc++ pthread )
add_test(max_potential_on_tree_dynamic_prog_test  max_potential_on_tree_dynamic_prog_test)

add_executable(max_potential_on_tree_iterative_test max_potential_on_tree_iterative_test.cpp)
target_link_libraries(max_potential_on_tree_iterative_test LPMP DD_ILP lingeling m stdc++ pthread )
add_test(max_potential_on_tree_iterative_test max_potential_on_tree_iterative_test)

add_executable(max_potential_uai_chain_test max_potential_uai_chain_test.cpp)
target_link_libraries(max_potential_uai_chain_test LPMP DD_ILP FW-MAP arboricity lingeling m stdc++ pthread horizon_tracking_uai_input)
add_test(max_potential_uai_chain_test max_potential_uai_chain_test)

add_executable(max_potential_uai_grid_chains_decompose_test max_potential_uai_grid_chains_decompose_test.cpp)
target_link_libraries(max_potential_uai_grid_chains_decompose_test LPMP DD_ILP FW-MAP arboricity lingeling m stdc++ pthread horizon_tracking_uai_input)
add_test(max_potential_uai_grid_chains_decompose_test max_potential_uai_grid_chains_decompose_test)

add_executable(max_potential_uai_grid_trees_decompose_test max_potential_uai_grid_trees_decompose_test.cpp)
target_link_libraries(max_potential_uai_grid_trees_decompose_test LPMP DD_ILP FW-MAP arboricity lingeling m stdc++ pthread horizon_tracking_uai_input)
add_test(max_potential_uai_grid_trees_decompose_test max_potential_uai_grid_trees_decompose_test)

add_executable(horizon_tracking_primal_propagation_test horizon_tracking_primal_propagation_test.cpp)
target_link_libraries(horizon_tracking_primal_propagation_test LPMP FW-MAP arboricity m stdc++ pthread horizon_tracking_uai_input)
add_test(horizon_tracking_primal_propagation_test horizon_tracking_primal_propagation_test)
