add_executable(max_potential_on_chain_test max_potential_on_chain_test.cpp)
target_link_libraries(max_potential_on_chain_test LPMP MRF_factors)
add_test(max_potential_on_chain_test max_potential_on_chain_test) 

add_executable(max_potential_uai_chain_test max_potential_uai_chain_test.cpp)
target_link_libraries(max_potential_uai_chain_test LPMP FW-MAP arboricity MRF_factors horizon_tracking_uai_input)
add_test(max_potential_uai_chain_test max_potential_uai_chain_test)

add_executable(max_potential_uai_grid_chains_decompose_test max_potential_uai_grid_chains_decompose_test.cpp)
target_link_libraries(max_potential_uai_grid_chains_decompose_test LPMP FW-MAP arboricity MRF_factors horizon_tracking_uai_input)
add_test(max_potential_uai_grid_chains_decompose_test max_potential_uai_grid_chains_decompose_test)

add_executable(horizon_tracking_primal_propagation_test horizon_tracking_primal_propagation_test.cpp)
target_link_libraries(horizon_tracking_primal_propagation_test LPMP FW-MAP arboricity MRF_factors horizon_tracking_uai_input)
add_test(horizon_tracking_primal_propagation_test horizon_tracking_primal_propagation_test)

#add_executable(horizon_tracking_factor_test horizon_tracking_factor_test.cpp)
#target_link_libraries(horizon_tracking_factor_test LPMP)
#add_test(horizon_tracking_factor_test horizon_tracking_factor_test)
