add_executable(transform_binary_Potts_test transform_binary_Potts_test.cpp)
target_link_libraries(transform_binary_Potts_test LPMP)
add_test(transform_binary_Potts_test transform_binary_Potts_test)

add_executable(max_cut_cycle_packing_test max_cut_cycle_packing_test.cpp)
target_link_libraries(max_cut_cycle_packing_test LPMP max_cut_cycle_packing)
add_test(max_cut_cycle_packing_test max_cut_cycle_packing_test)

add_executable(max_cut_odd_bicycle_wheel_packing_test max_cut_odd_bicycle_wheel_packing_test.cpp)
target_link_libraries(max_cut_odd_bicycle_wheel_packing_test LPMP max_cut_cycle_packing max_cut_odd_bicycle_wheel_packing)
add_test(max_cut_odd_bicycle_wheel_packing_test max_cut_odd_bicycle_wheel_packing_test)

add_executable(max_cut_labeling_test max_cut_labeling_test.cpp)
target_link_libraries(max_cut_labeling_test LPMP)
add_test(max_cut_labeling_test max_cut_labeling_test)

add_executable(max_cut_triplet_quintuplet_message_test max_cut_triplet_quintuplet_message_test.cpp)
target_link_libraries(max_cut_triplet_quintuplet_message_test LPMP)
add_test(max_cut_triplet_quintuplet_message_test max_cut_triplet_quintuplet_message_test)

add_executable(max_cut_quintuplet_constructor_test max_cut_quintuplet_constructor_test.cpp)
target_link_libraries(max_cut_quintuplet_constructor_test LPMP max_cut_greedy_additive_edge_contraction max_cut_sahni_gonzalez max_cut_local_search max_cut_cycle_packing max_cut_odd_bicycle_wheel_packing)
add_test(max_cut_quintuplet_constructor_test max_cut_quintuplet_constructor_test)
