add_executable(test_multicut_cycle_packing test_multicut_cycle_packing.cpp)
target_link_libraries(test_multicut_cycle_packing LPMP multicut_instance multicut_cycle_packing)
add_test(test_multicut_cycle_packing test_multicut_cycle_packing)

add_executable(test_multicut_odd_wheel_packing test_multicut_odd_wheel_packing.cpp)
target_link_libraries(test_multicut_odd_wheel_packing LPMP multicut_instance multicut_odd_wheel_packing)
add_test(test_multicut_odd_wheel_packing test_multicut_odd_wheel_packing)

add_executable(test_multicut_odd_bicycle_wheel_packing test_multicut_odd_bicycle_wheel_packing.cpp)
target_link_libraries(test_multicut_odd_bicycle_wheel_packing LPMP multicut_instance multicut_odd_bicycle_wheel_packing)
add_test(test_multicut_odd_bicycle_wheel_packing test_multicut_odd_bicycle_wheel_packing)

add_executable(test_multicut_message_passing_parallel test_multicut_message_passing_parallel.cpp)
target_link_libraries(test_multicut_message_passing_parallel LPMP multicut_instance multicut_message_passing_parallel)
add_test(test_multicut_message_passing_parallel test_multicut_message_passing_parallel)
