add_executable(multigraph_matching_consistency_constraint_test multigraph_matching_consistency_constraint_test.cpp)
target_link_libraries(multigraph_matching_consistency_constraint_test LPMP multigraph_matching_factors)
add_test(multigraph_matching_consistency_constraint_test multigraph_matching_consistency_constraint_test)

add_executable(minimal_synchronization_example minimal_synchronization_example.cpp)
target_link_libraries(minimal_synchronization_example LPMP multigraph_matching_factors multicut_kernighan_lin multigraph_matching_input transform_multigraph_matching graph_matching_frank_wolfe)
add_test(minimal_synchronization_example minimal_synchronization_example)

add_executable(multigraph_matching_transformation multigraph_matching_transformation.cpp)
target_link_libraries(multigraph_matching_transformation LPMP multigraph_matching_factors multigraph_matching_input transform_multigraph_matching)
add_test(multigraph_matching_transformation multigraph_matching_transformation)

add_executable(test_multigraph_matching_min_marginals_triplet_consistency test_multigraph_matching_min_marginals_triplet_consistency.cpp)
target_link_libraries(test_multigraph_matching_min_marginals_triplet_consistency LPMP multigraph_matching_factors)
add_test(test_multigraph_matching_min_marginals_triplet_consistency test_multigraph_matching_min_marginals_triplet_consistency)

add_executable(test_multigraph_matching_synchronization test_multigraph_matching_synchronization.cpp)
target_link_libraries(test_multigraph_matching_synchronization LPMP multigraph_matching_synchronization)
add_test(test_multigraph_matching_synchronization test_multigraph_matching_synchronization)
add_test(koopmans_beckmann_test_input koopmans_beckmann_test_input) 

add_test(NAME test_multigraph_matching_instance_python_construction
    COMMAND ${PYTHON_EXECUTABLE}  ${CMAKE_CURRENT_SOURCE_DIR}/test_multigraph_matching_instance_python_construction.py
    WORKING_DIRECTORY ${PROJECT_SOURCE_DIR}/src/multigraph_matching/
    )
set_tests_properties(test_multigraph_matching_instance_python_construction
    PROPERTIES ENVIRONMENT "PYTHONPATH=${CMAKE_BINARY_DIR}/src/multigraph_matching:$ENV{PYTHONPATH}")

